<resources>
    <string name="app_name">CEP</string>
    <string name="DigiteOcep">Digite o Cep</string>
    <string name="tipoDeLogradouro">Tipo de Logradouro</string>
    <string name="logradouro">Logradouro</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="pesquisar">Pesquisar</string>
</resources>
